--- a/Exp2.html
+++ b/Exp2.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 #div1 {
-  width: 350px;
-  height: 70px;
+  width: 300px;
+  height: 250px;
   padding: 10px;
   border: 1px solid #aaaaaa;
 }
@@ -31,7 +31,7 @@ function drop(ev) {
 
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 <br>
-<img id="drag" src="/home/3-cse-b/Downloads/vvit.png" draggable="true" ondragstart="drag(event)" width="336" height="69">
+<img id="drag" src="https://www.vvitguntur.com/favicon.ico" alt="vvit logo" draggable="true" ondragstart="drag(event)" >
 
 </body>
 </html>
